# frate

./: .clang-format  .clangd  .frate-local.json  .gitignore  .gitlab-ci.yml  3  ;  CLEAN_EVERYTHIN.sh  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  compile_commands.json  compile_commands.json.tmpf72ae  config.json  config.toml  cpm-package-lock.cmake  frate-completions.zsh  frate-project.json  install_manifest.txt  memcheck  something  test-project
.cache/clangd/index/: Command.h.AC74AA487AF6839E.idx  CommandInit.cpp.B98CEAAA333D9835.idx
.github/: FUNDING.yml
.github/workflows/: clang-format.yml  cmake-single-platform.yml  dev-pull.yml  dev.yml  prod-pull.yml  prod.yml
.tipi/: id
CPM_modules/: FindCcache.cmake.cmake  Findcurl.cmake  Findcxxopts.cmake  Findnlohmann_json.cmake  Findtermcolor.cmake
completions/: cmaker-completion.bash  cmaker-completion.fish  cmaker-completion.zsh  frate-completion.bash  frate-completion.fish  frate-completion.zsh
docs/man/: cmaker.1  frate.1
include/: Command.hpp
include/CMaker/: Command.hpp  Generators.hpp
include/CMaker/Command/: Author.hpp  Command.hpp  CommandMode.hpp  Flags.hpp  License.hpp  Modes.hpp  Package.hpp  RemoteServers.hpp  Toolchains.hpp
include/CMaker/Generators/: Generators.hpp
include/CMaker/Test/: Test.hpp
include/CMaker/Utils/: General.hpp
include/Frate/: Command.hpp  CommandHandler.hpp  CommandTargetHandler.hpp  Constants.hpp  Dependency.hpp  Frate.hpp  FrateException.hpp  Generators.hpp  Interface.hpp  LuaAPI.hpp  Mode.hpp  Package.hpp  Project.hpp  ProjectPrompt.hpp  Reflection.hpp  RemoteServer.hpp  System.hpp  Template.hpp  Wizards.hpp
include/Frate/Command/: Author.hpp  AvailableTriples.hpp  CommandMode.hpp  Exceptions.hpp  Flags.hpp  Keywords.hpp  Library.hpp  License.hpp  LuaApi.hpp  Modes.hpp  Name.hpp  Package.hpp  RemoteServers.hpp  Set.hpp  Template.hpp  TemplateIndex.hpp  Toolchains.hpp
include/Frate/Lua/: Exceptions.hpp  LuaAPI.hpp  TemplateEnvironment.hpp  Utils.hpp
include/Frate/Package/: IndexEntry.hpp  Manager.hpp
include/Frate/Project/: Cache.hpp  Config.hpp  Exceptions.hpp  InstalledTemplate.hpp  Local.hpp  Mode.hpp  ProjectPrompt.hpp  Template.hpp  TemplateIndexEntry.hpp  TemplateManager.hpp  TemplateMeta.hpp
include/Frate/System/: Build.hpp  Capabilities.hpp  Capability.hpp  GitCommit.hpp  GitException.hpp  GitProvider.hpp  GitRef.hpp  GitStatus.hpp  SSH.hpp  Watcher.hpp
include/Frate/Template/: Exceptions.hpp  IndexEntry.hpp  Manager.hpp  Meta.hpp  New.hpp  Renderer.hpp  TemplateManager.hpp  TemplateMeta.hpp
include/Frate/Test/: Test.hpp
include/Frate/Utils/: CLI.hpp  CLIColors.hpp  CLIExceptions.hpp  CLIList.hpp  CLIPrompt.hpp  Config.hpp  ConfigManager.hpp  FileFilter.hpp  General.hpp  Logging.hpp  Macros.hpp  Validation.hpp
resources/: test.toml
src/: CMakeLists.template  Command.cpp  Command.h  CommandFlags.cpp  CommandGeneral.cpp  CommandHelp.cpp  CommandInit.cpp  CommandRun.cpp  main.cpp
src/Command/: Capabilities.cpp  Capability.cpp  Command.h  Command.hpp  CommandAdd.cpp  CommandBuild.cpp  CommandClean.cpp  CommandDependency.cpp  CommandDev.cpp  CommandFTP.cpp  CommandFlags.cpp  CommandGeneral.cpp  CommandGet.cpp  CommandHelp.cpp  CommandInit.cpp  CommandList.cpp  CommandMode.cpp  CommandModes.cpp  CommandNew.cpp  CommandRemove.cpp  CommandRun.cpp  CommandSearch.cpp  CommandSearchPackage.cpp  CommandServer.cpp  CommandSet.cpp  CommandToolchains.cpp  CommandUpdate.cpp  CommandWatcher.cpp  Context.cpp  IndexCache.cpp  Interface.cpp  Options.cpp  Package.cpp  Project.cpp  SearchPackage.cpp
src/Command/Actions/: Add.cpp  Build.cpp  Clean.cpp  FTP.cpp  Help.cpp  List.cpp  New.cpp  Remove.cpp  Run.cpp  Search.cpp  Set.cpp  Template.cpp  Update.cpp  UvWatch.cpp  Watch.cpp  ZshCompletions.cpp
src/Command/Author/: Author.cpp
src/Command/Flags/: AddFlags.cpp  Flags.cpp  ListFlags.cpp  RemoveFlags.cpp
src/Command/Helpers/: Dependency.cpp  IndexCache.cpp  Interface.cpp  Mode.cpp  Options.cpp  Package.cpp  Project.cpp  ProjectOption.cpp  ProjectPrompt.cpp  RemoteServer.cpp  SearchPackage.cpp  Template.cpp  TemplateMeta.cpp
src/Command/Keywords/: AddKeywords.cpp  Keywords.cpp
src/Command/License/: License.cpp  License.hpp  ListLicense.cpp  SetLicense.cpp
src/Command/Mode/: CommandMode.cpp
src/Command/Modes/: CommandModes.cpp
src/Command/Name/: Name.cpp  SetName.cpp  SetVersions.cpp
src/Command/Package/: AddPackages.cpp  GetPackages.cpp  ListPackages.cpp  Package.cpp  Package.hpp  PackageAdd.cpp  PackageGet.cpp  PackageList.cpp  PackagePrompts.cpp  PackageRemove.cpp  PackageSearch.cpp  RemovePackage.cpp  SearchPackages.cpp
src/Command/RemoteServers/: AddRemoteServer.cpp  CommandServer.cpp  GetRemoteServer.cpp  RemoteServer.cpp  (+3 more)
src/Generators/: CMakeGenerator.cpp  CMakeTemplates.cpp  ClangToolchainGenerator.cpp  ConfigJsonGenerator.cpp  ConfigTomlGenerator.cpp  DockerTemplate.cpp  Generators.hpp  GitIgnoreGenerator.cpp  ProjectGenerator.cpp  ReadmeGenerator.cpp  ZigToolchainGenerator.cpp
src/Lua/: API.cpp  Api.cpp  FetchJson.cpp  FetchText.cpp  Format.cpp  GetOS.cpp  GetPath.cpp  GetPathsRecurse.cpp  PrintTable.cpp  RegisterProject.cpp  TemplateEnvironment.cpp  Utils.cpp
src/Project/: Cache.cpp  Config.cpp  Dependency.cpp  InstalledTemplate.cpp  Local.cpp  Package.cpp  Prompt.cpp  TemplateIndexEntry.cpp  TemplateManager.cpp
src/System/: Capabilities.cpp  Capability.cpp  FindCmake.cpp  FindCompilers.cpp
src/Template/: Config.cpp  IndexEntry.cpp  Manager.cpp  Meta.cpp  Renderer.cpp
src/Test/: Test.hpp  TestCommands.cpp  TestCommands.hpp  TestGenerators.cpp  TestUtils.cpp
src/Utils/: CLI.cpp  CLI.hpp  CLIList.cpp  CLIPrompt.cpp  Debug.cpp  FileFilter.cpp  General.cpp  General.hpp  Logging.cpp
src/VersionGetters/: GetCmakeVersion.cpp  GetGccVersion.cpp
src/Wizards/: ProjectWizard.cpp  Wizard.cpp
toolchains/: windows.cmake
tools/conan_scraper/: Cargo.toml  conan_sample.json
tools/src/: main.rs
tools/vcpkg_parser/: Cargo.toml
tools/vcpkg_parser/src/: main.rs
(+96 files in other folders)
