[package]
name = "vcpkg_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"


[profile.release]
opt-level = 3
strip = true
lto = true
